# open62541

./: .gitmodules  CMakeLists.txt  generateBuildFiles.ps1
arch/: network_tcp.c  ua_socket_tcp.c  ua_socket_tcp.h
arch/posix/: ua_architecture.h  ua_clock.c
examples/: server.c  server_firstSteps.c
fuzz_crash/: config_used.txt  crash-2f7be03f0e3ce6f2d5b3efef4c8d3fec308c2493  crash-cc7185217f7ddeeceafcff25f9ca2903df636f57  crash-fe848819d3b52ed8d3683e784718057a004f497f  crash_reproduction.py
fuzz_crash/input_chain/: chain.def
include/: ua_client.h  ua_client_highlevel.h  ua_log.h  ua_plugin_log.h  ua_plugin_network_manager.h  ua_plugin_nodestore.h  ua_plugin_pki.h  ua_plugin_securitypolicy.h  ua_plugin_socket.h  ua_securitycontext.h  ua_securitypolicy.h  ua_server.h  ua_server_config.h  ua_types.h
include/open62541/plugin/: network.h
plugins/: ua_accesscontrol_default.c  ua_accesscontrol_default.h  ua_clock.c  ua_config_default.c  ua_config_default.h  ua_config_standard.c  ua_config_standard.h  ua_debug_dump_pkgs.c  ua_log_stdout.c  ua_network_managers.h  ua_network_tcp.c  ua_network_udp.c  ua_network_udp.h  ua_nodestore_default.c  ua_pki_certificate.c  ua_securitypolicy_basic128rsa15.c  ua_securitypolicy_basic128rsa15.h  ua_securitypolicy_none.c  ua_securitypolicy_none.h  ua_select_based_network_manager.c
src/: ua_connection.c  ua_connection_internal.h  ua_network_manager.c  ua_network_manager.h  ua_securechannel.c  ua_securechannel.h  ua_securechannel_crypto.c  ua_timer.c  ua_timer.h  ua_types.c  ua_types_encoding_binary.c  ua_util.c  ua_util.h
src/client/: ua_client.c  ua_client_connect.c  ua_client_discovery.c  ua_client_highlevel.c  ua_client_highlevel_subscriptions.c  ua_client_internal.h
src/server/: ua_mdns.c  ua_mdns_internal.h  ua_nodes.c  ua_securechannel_manager.c  ua_securechannel_manager.h  ua_server.c  ua_server_binary.c  ua_server_discovery.c  ua_server_internal.h  ua_server_ns0.c  ua_server_utils.c  ua_server_worker.c  ua_services.h  ua_services_attribute.c  ua_services_call.c  ua_services_discovery.c  ua_services_discovery_multicast.c  ua_services_nodemanagement.c  ua_services_securechannel.c  ua_services_session.c  ua_services_subscription.c  ua_services_view.c  ua_session.c  ua_session.h  ua_session_manager.c  ua_session_manager.h  ua_subscription.c  ua_subscription.h  ua_subscription_datachange.c
tests/stateful_fuzz/: CMakeLists.txt  fuzz_stateful.cc
tools/cmake/: FindMbedTLS.cmake  linting_target.cmake
